- Fixed: Simultaneous display of recipe photos and placeholder images
- Fixed: Behavior option "reduce app startup time" not working on Android 12+
- Fixed: Crash on recipe page because server somehow returns wrong floating point format (#652)
- Fixed: Floating action button not hidden in shopping mode
- Fixed: Occasionally dark toolbar menu icons in dark mode (thanks @martin-braun!) (#631)

## 3.0.0

- New: Material You redesign with dynamic colors for Android 12+
- New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)
- New: Support for more than two decimal places for amounts & prices, uses option from server (#459)
- New: Product option "Move on open" (#569)
- New: Option in behavior settings for copying barcode note to stock entry note field (#609)
- New: Option on purchase page to print stock label and default option on master product page (#570)
- Improved: Layout on large screens
- Improved: (not F-Droid) ML Kit scanner now only recognises barcodes in preview field
- Improved: Shopping mode page now can be opened with deeplink "grocy://shoppingmodepage" (#519)
- Improved: Selection of child products in purchase form if parent product has no own stock (#508)
- Improved: Master object lists now have fuzzy search (#610)
- Improved: Consume quick mode confirmation page now has option to open instead of consume (#572)
- Improved: Allow changing stock unit of product if no transaction was made since creation (#635)
- Fixed: F-Droid build should work again (#566)
- Fixed: Crash when amount in recipe ingredient was NaN (thanks @Whhoesj for your fix) (#565)
- Fixed: Wrong ingredient amount in the recipe view with base servings other than 1 (#584)
- Fixed: Wrong ingredient amount on recipe pages related to unit conversions (#584, #585, #612)
- Fixed: Wrong price calculation when last price was stored for barcode (#578)
- Fixed: Crash on chores overview page with wrong rescheduled date format (#564)