@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingStart="16dp"
-        android:paddingEnd="0dp"
+        android:paddingEnd="16dp"
         android:paddingTop="16dp"
         android:paddingBottom="12dp">
 
@@ -73,7 +73,6 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:imeOptions="actionDone"
-              android:maxLength="10"
               android:text="@={bottomsheet.inputLive}"
               app:onDoneClickInSoftKeyboard="@{() -> bottomsheet.dismiss()}" />
 
@@ -89,7 +88,7 @@
           <com.google.android.material.button.MaterialButton
             android:id="@+id/less"
             style="@style/Widget.Grocy.Button.IconButton"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="0dp"
             android:onClick="@{() -> bottomsheet.less()}"
             app:icon="@drawable/ic_round_expand_more" />
 
@@ -115,7 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="0dp"
             android:text="@string/action_save"
             android:onClick="@{() -> bottomsheet.dismiss()}" />
 
