@@ -10,6 +10,7 @@
 - Fixed: Crash on recipe page because server somehow returns wrong floating point format (#652)
 - Fixed: Floating action button not hidden in shopping mode
 - Fixed: Occasionally dark toolbar menu icons in dark mode (thanks @martin-braun!) (#631)
+- Fixed: Unintended length limit on bottom sheet for general text and number input (#657)
 
 ## 3.0.0
 
